logo bug fix on mobile device

--- a/styles/stylesbootstrap.css
+++ b/styles/stylesbootstrap.css
@@ -36,11 +36,7 @@ footer > div.footer-links > a {
 #logo-2-neon{
     display: block;
     max-width:6rem;
-<<<<<<< HEAD
     height: 6rem;
-=======
-    max-height: 100%;
->>>>>>> c8b78a08b38db82c00ecfd41eb750f30bdb33057
     margin: auto;
 }
     @media screen and (max-width:600px){
